Fix - Revert back form left-whitespace issue

--- a/assets/css/user-registration.scss
+++ b/assets/css/user-registration.scss
@@ -167,6 +167,10 @@
 		#node_recaptcha_register {
 			padding: 0 10px;
 		}
+
+		.input-text {	
+			padding-left: 35px !important;
+		}
 	}
 
 	* {
